// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`api/queries/getVTokens > returns the vTokens on success 1`] = `
{
  "vTokens": [
    {
      "address": "0x170d3b2da05cc2124334240fB34ad1359e34C562",
      "decimals": 8,
      "symbol": "vlisUSD",
      "underlyingToken": {
        "address": "0xe73774DfCD551BF75650772dC2cC56a2B6323453",
        "asset": "/src/libs/tokens/img/lisUSD.png",
        "decimals": 18,
        "symbol": "lisUSD",
      },
    },
    {
      "address": "0x3338988d0beb4419Acb8fE624218754053362D06",
      "decimals": 8,
      "symbol": "vUSDT",
      "underlyingToken": {
        "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
        "asset": "/src/libs/tokens/img/usdt.svg",
        "decimals": 6,
        "symbol": "USDT",
      },
    },
    {
      "address": "0x80CC30811e362aC9aB857C3d7875CbcCc0b65750",
      "decimals": 8,
      "symbol": "vUSDT",
      "underlyingToken": {
        "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
        "asset": "/src/libs/tokens/img/usdt.svg",
        "decimals": 6,
        "symbol": "USDT",
      },
    },
    {
      "address": "0x0bFE4e0B8A2a096A27e5B18b078d25be57C08634",
      "decimals": 8,
      "symbol": "vUSDT",
      "underlyingToken": {
        "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
        "asset": "/src/libs/tokens/img/usdt.svg",
        "decimals": 6,
        "symbol": "USDT",
      },
    },
    {
      "address": "0x231dED0Dfc99634e52EE1a1329586bc970d773b3",
      "decimals": 8,
      "symbol": "vWBNB",
      "underlyingToken": {
        "address": "0xae13d989daC2f0dEbFf460aC112a837C89BAa7cd",
        "asset": "/src/libs/tokens/img/wbnb.svg",
        "decimals": 18,
        "symbol": "WBNB",
      },
    },
    {
      "address": "0x2197d02cC9cd1ad51317A0a85A656a0c82383A7c",
      "decimals": 8,
      "symbol": "vUSDT",
      "underlyingToken": {
        "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
        "asset": "/src/libs/tokens/img/usdt.svg",
        "decimals": 6,
        "symbol": "USDT",
      },
    },
    {
      "address": "0x712774CBFFCBD60e9825871CcEFF2F917442b2c3",
      "decimals": 8,
      "symbol": "vUSDT",
      "underlyingToken": {
        "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
        "asset": "/src/libs/tokens/img/usdt.svg",
        "decimals": 6,
        "symbol": "USDT",
      },
    },
    {
      "address": "0xD5C4C2e2facBEB59D0216D0595d63FcDc6F9A1a7",
      "decimals": 8,
      "symbol": "vUSDC",
      "underlyingToken": {
        "address": "0x16227D60f7a0e586C66B005219dfc887D13C9531",
        "asset": "/src/libs/tokens/img/usdc.svg",
        "decimals": 6,
        "symbol": "USDC",
      },
    },
    {
      "address": "0xb7526572FFE56AB9D7489838Bf2E18e3323b441A",
      "decimals": 8,
      "symbol": "vUSDT",
      "underlyingToken": {
        "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
        "asset": "/src/libs/tokens/img/usdt.svg",
        "decimals": 6,
        "symbol": "USDT",
      },
    },
    {
      "address": "0x08e0A5575De71037aE36AbfAfb516595fE68e5e4",
      "decimals": 8,
      "symbol": "vBUSD",
      "underlyingToken": {
        "address": "0x8301F2213c0eeD49a7E28Ae4c3e91722919B8B47",
        "asset": "/src/libs/tokens/img/busd.svg",
        "decimals": 18,
        "symbol": "BUSD",
      },
    },
    {
      "address": "0x2E7222e51c0f6e98610A1543Aa3836E092CDe62c",
      "decimals": 8,
      "symbol": "vBNB",
      "underlyingToken": {
        "address": "0x0000000000000000000000000000000000000000",
        "asset": "/src/libs/tokens/img/bnb.svg",
        "decimals": 18,
        "isNative": true,
        "symbol": "BNB",
      },
    },
    {
      "address": "0x6d6F697e34145Bb95c54E77482d97cc261Dc237E",
      "decimals": 8,
      "symbol": "vXVS",
      "underlyingToken": {
        "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
        "asset": "/src/libs/tokens/img/xvs.svg",
        "decimals": 18,
        "symbol": "XVS",
      },
    },
    {
      "address": "0x162D005F0Fff510E54958Cfc5CF32A3180A84aab",
      "decimals": 8,
      "symbol": "vETH",
      "underlyingToken": {
        "address": "0x98f7A83361F7Ac8765CcEBAB1425da6b341958a7",
        "asset": "/src/libs/tokens/img/eth.svg",
        "decimals": 18,
        "isNative": true,
        "symbol": "ETH",
      },
    },
    {
      "address": "0xF206af85BC2761c4F876d27Bd474681CfB335EfA",
      "decimals": 8,
      "symbol": "vUST",
      "underlyingToken": {
        "address": "0x5A79efD958432E72211ee73D5DDFa9bc8f248b5F",
        "asset": "/src/libs/tokens/img/ust.svg",
        "decimals": 18,
        "symbol": "UST",
      },
    },
    {
      "address": "0x9C3015191d39cF1930F92EB7e7BCbd020bCA286a",
      "decimals": 8,
      "symbol": "vLUNA",
      "underlyingToken": {
        "address": "0xf36160EC62E3B191EA375dadfe465E8Fa1F8CabB",
        "asset": "/src/libs/tokens/img/luna.svg",
        "decimals": 6,
        "symbol": "LUNA",
      },
    },
  ],
}
`;

exports[`api/queries/getVTokens > still functions without passing venusLensContract or legacyPoolComptrollerContract 1`] = `
{
  "vTokens": [
    {
      "address": "0x170d3b2da05cc2124334240fB34ad1359e34C562",
      "decimals": 8,
      "symbol": "vlisUSD",
      "underlyingToken": {
        "address": "0xe73774DfCD551BF75650772dC2cC56a2B6323453",
        "asset": "/src/libs/tokens/img/lisUSD.png",
        "decimals": 18,
        "symbol": "lisUSD",
      },
    },
    {
      "address": "0x3338988d0beb4419Acb8fE624218754053362D06",
      "decimals": 8,
      "symbol": "vUSDT",
      "underlyingToken": {
        "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
        "asset": "/src/libs/tokens/img/usdt.svg",
        "decimals": 6,
        "symbol": "USDT",
      },
    },
    {
      "address": "0x80CC30811e362aC9aB857C3d7875CbcCc0b65750",
      "decimals": 8,
      "symbol": "vUSDT",
      "underlyingToken": {
        "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
        "asset": "/src/libs/tokens/img/usdt.svg",
        "decimals": 6,
        "symbol": "USDT",
      },
    },
    {
      "address": "0x0bFE4e0B8A2a096A27e5B18b078d25be57C08634",
      "decimals": 8,
      "symbol": "vUSDT",
      "underlyingToken": {
        "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
        "asset": "/src/libs/tokens/img/usdt.svg",
        "decimals": 6,
        "symbol": "USDT",
      },
    },
    {
      "address": "0x231dED0Dfc99634e52EE1a1329586bc970d773b3",
      "decimals": 8,
      "symbol": "vWBNB",
      "underlyingToken": {
        "address": "0xae13d989daC2f0dEbFf460aC112a837C89BAa7cd",
        "asset": "/src/libs/tokens/img/wbnb.svg",
        "decimals": 18,
        "symbol": "WBNB",
      },
    },
    {
      "address": "0x2197d02cC9cd1ad51317A0a85A656a0c82383A7c",
      "decimals": 8,
      "symbol": "vUSDT",
      "underlyingToken": {
        "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
        "asset": "/src/libs/tokens/img/usdt.svg",
        "decimals": 6,
        "symbol": "USDT",
      },
    },
    {
      "address": "0x712774CBFFCBD60e9825871CcEFF2F917442b2c3",
      "decimals": 8,
      "symbol": "vUSDT",
      "underlyingToken": {
        "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
        "asset": "/src/libs/tokens/img/usdt.svg",
        "decimals": 6,
        "symbol": "USDT",
      },
    },
  ],
}
`;
